--- a/index.org
+++ b/index.org
@@ -19,10 +19,10 @@ SCHOOL OF BUSINESS ADMINISTRATION
 **Email**:  matthew.brigida@sunyit.edu
 
 # **Class Location**:  Donovan 1157
-**Class Location**: Online and CPCTR 0124
+**Class Location**: Online
 
 # **Class Day/Time**: Tuesday, 6:00--9:30pm
-**Class Day/Time**: Asynchronous online and Wednesday 6:00pm to 9:30pm 
+**Class Day/Time**: Synchronous Online Wednesday 6:00pm to 9:30pm.  We will meet via Blackboard Collaborate
 
 **Text**: [[https://www.amazon.com/dp/0073382469/ref=olp_product_details?_encoding=UTF8&me=][Essentials of Corporate Finance, 7th ed, ISBN: 978-0073382463]] | [[https://www.amazon.com/gp/offer-listing/0073382469/ref=dp_olp_used?ie=UTF8&condition=used][Used Copies usually starting from about $4]] You also may use other editions of the text.
 
