--- a/index.org
+++ b/index.org
@@ -22,7 +22,7 @@ SCHOOL OF BUSINESS ADMINISTRATION
 **Class Location**: Online
 
 # **Class Day/Time**: Tuesday, 6:00--9:30pm
-**Class Day/Time**: Synchronous Online Wednesday 6:00pm to 9:30pm.  We will meet via Blackboard Collaborate
+**Class Day/Time**: Synchronous Online Wednesday 6:00pm to 9:30pm.  We will meet via Blackboard Collaborate.
 
 **Text**: [[https://www.amazon.com/dp/0073382469/ref=olp_product_details?_encoding=UTF8&me=][Essentials of Corporate Finance, 7th ed, ISBN: 978-0073382463]] | [[https://www.amazon.com/gp/offer-listing/0073382469/ref=dp_olp_used?ie=UTF8&condition=used][Used Copies usually starting from about $4]] You also may use other editions of the text.
 
@@ -69,11 +69,15 @@ Failure to take an exam will result in a grade of 0, unless it is due to a **ver
 
 * Project
 
+#+begin_comment
 There will be no project over the summer semester.
+#+end_comment
 
 #+begin_comment
 <!-- add project with banking research data set here -->
 #+end_comment
+
+Value a tolling agreement on a natural gas fired power plant near Boston Mass via discounted cash flows.  This project will make heavy use of core concepts learned in this course---namely the calculation of cash flows and the time-value-of-money.  [[https://www.eia.gov/electricity/wholesale/#history][Data are here]].
 
 #+begin_comment
 In groups, students will either:
