--- a/index.org
+++ b/index.org
@@ -1,6 +1,7 @@
 #+TITLE:Syllabus (FIN 302) Financial Management Principles
 #+AUTHOR: Matthew Brigida, Ph.D.
 #+SETUPFILE: https://fniessen.github.io/org-html-themes/setup/theme-readtheorg.setup
+# #+options: toc:nil
 
 
 #+BEGIN_CENTER
@@ -11,18 +12,15 @@ SCHOOL OF BUSINESS ADMINISTRATION
 
 **Instructor**: Matthew Brigida, Ph.D.
 
-**Office**: Donovan 1277
+**Office**: Online Fall 2020 | On Campus Office is Donovan 1277
 
-**Office Hours**: Tuesday and Wednesday 3:30--6:00
-## Monday and Wednesday 2--3pm,
+**Office Hours**: Wednesday 4:00--6:00, I will be in a BB Collaborate session.  Feel free to log in and ask questions.
 
 **Email**:  matthew.brigida@sunyit.edu
 
-# **Class Location**:  Donovan 1157
-**Class Location**: Online
+**Class Location**: Online (Synchronous)
 
-# **Class Day/Time**: Tuesday, 6:00--9:30pm
-**Class Day/Time**: Synchronous Online Wednesday 6:00pm to 9:30pm.  We will meet via Blackboard Collaborate. All lectures will be recorded.
+**Class Day/Time**: Synchronous Online Wednesday 6:00pm to 9:30pm.  We will meet via Blackboard Collaborate. All lectures will also be recorded.
 
 **Text**: [[https://www.amazon.com/dp/0073382469/ref=olp_product_details?_encoding=UTF8&me=][Essentials of Corporate Finance, 7th ed, ISBN: 978-0073382463]] | [[https://www.amazon.com/gp/offer-listing/0073382469/ref=dp_olp_used?ie=UTF8&condition=used][Used Copies usually starting from about $4]] You also may use other editions of the text.
 
@@ -61,13 +59,15 @@ CLO 4. Leadership and Communication: Be capable of expressing key financial conc
 
 There will be three exams (two during the semester and a final).  The exams will be multiple choice.
 
+Failure to take an exam will result in a grade of 0, unless it is due to a **verifiable** medical or family emergency.  In such a case you must provide documentation.
+
 #+begin_comment
 There will be two exams.  The exams will be multiple choice.
 #+end_comment
 
-Failure to take an exam will result in a grade of 0, unless it is due to a **verifiable** medical or family emergency.  In such a case you must provide documentation.
-
 * Project
+
+Value a tolling agreement on a natural gas fired power plant near Boston Mass via discounted cash flows.  This project will make heavy use of core concepts learned in this course---namely the calculation of cash flows and the time-value-of-money.  [[https://www.eia.gov/electricity/wholesale/#history][Data are here]].
 
 #+begin_comment
 There will be no project over the summer semester.
@@ -77,7 +77,6 @@ There will be no project over the summer semester.
 <!-- add project with banking research data set here -->
 #+end_comment
 
-Value a tolling agreement on a natural gas fired power plant near Boston Mass via discounted cash flows.  This project will make heavy use of core concepts learned in this course---namely the calculation of cash flows and the time-value-of-money.  [[https://www.eia.gov/electricity/wholesale/#history][Data are here]].
 
 #+begin_comment
 In groups, students will either:
@@ -93,25 +92,26 @@ In addition, students will gain experience handling data, and making reasonable 
 
 * Attendance/Quizzes/Participation
 
+Throughout the semester I will take attendance, give unanounced quizzes, and otherwise evaluate your participation.  Failure to attend class and participate will reduce your participation score, unless your absence is due to a **verifiable** medical or family emergency.  In such a case you must provide documentation.
+
 #+begin_comment  
 Your attendance will not affect your grade.  There is no penalty for missing class. 
 #+end_comment
-
-Throughout the semester I will take attendance, give unanounced quizzes, and otherwise evaluate your participation.  Failure to attend class and participate will reduce your participation score, unless your absence is due to a **verifiable** medical or family emergency.  In such a case you must provide documentation.
 
 
 * Grading
 
 #+BEGIN_CENTER
 
-| Item         | Points |
-|--------------+--------|
-| Exam 1       |     30 |
-| Exam 2       |     30 |
-| Final Exam   |     40 |
-|--------------+--------|
-| Total Points |    100 |
-|--------------+--------|
+| Item                             | Points |
+|----------------------------------+--------|
+| Exam 1                           |     25 |
+| Exam 2                           |     25 |
+| Final Exam                       |     30 |
+| Attendance/Project/Participation |     20 |
+|----------------------------------+--------|
+| Total Points                     |    100 |
+|----------------------------------+--------|
 
 # | Final Exam                                 |     25 |
 # | Project                                    |     15 |
@@ -172,13 +172,13 @@ We will cover chapters 1 through 14.  Since this course is asynchronous, you hav
 - 9/2:  Chapter 3 and 4 
 - 9/9: Chapter  5 
 - 9/16: Chapter 6 
-- 9/23: <span style="color:green">*Exam Review*</span> 
-- 9/30: <span style="color:red">**Exam 1**</span> & Chapter 7 
+- 9/23: @@html:<span style="color:red">**Exam 1**</span>@@
+- 9/30: Chapter 7 
 - 10/7: Chapter 8 
 - 10/14: Chapter 9 
 - 10/21: Chapter 10 and 11 
-- 10/28:  <span style="color:green">*Exam Review*</span> 
-- 11/4: <span style="color:red">**Exam 2**</span> & Chapter 12 
+- 10/28: Chapter 12 
+- 11/4: @@html:<span style="color:red">**Exam 2**</span>@@
 - 11/11: Chapter 13 and 14 
 - 11/18: Chapter 15 
 - 11/25: exam review 
