added about question

--- a/index.org
+++ b/index.org
@@ -212,6 +212,10 @@ We will cover chapters 1 through 14.  Since this course is asynchronous, you hav
 
 * How To Ask Questions
 
+How to properly phrase a question is important in the workplace as well as in courses, such as ours, where much of the interaction is online.  Remember when formulating your question, *you get what you give*.  If you simply say, "I don't understand", then I have very little information to work with and so I can't help.  I'll just say to rewatch the relevant video.
+
+Alternatively, if you say, "I calculated a stock's expected return using the CAPM and it is negative.  Can this be correct?".  Here you have (1) let me know what you have done, (2) your result, and (3) what you don't understand. In this case I can ask (1) which stock, and (2) is your beta negative, and proceed to explain whether your calculation is correct.
+
 [[https://stackoverflow.com/help/how-to-ask][See this post.]]  
 
 * Email Communication
