note on late submissions

--- a/index.org
+++ b/index.org
@@ -145,6 +145,8 @@ We will cover chapters 1 through 14.  Since this course is asynchronous, you
 have a measure of flexibility regarding when you cover each chapter.  The due
 dates for the exams/assignments are listed below.
 
+**You will receive a 0 if you do not hand in an exam or assignment by the due date.  Because you have a month to complete the exams/assignments, I will not accept late submissions for any reason.**
+
 ** Exam Due Dates
 
 - June 24: Exam 1 Due
